--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1>
             Matthew's Personal Website
         </h1>
-        <img src="C:\Users\16297\IMG_4405(1).jpeg">
+        <img src="personalimage.jpeg">
         <h3>
             About Me:
         </h3>
